# clifford-vae

./: .gitignore  README.md  __init__.py  environment.yml  hyperparameter_sweep.py  plot_results.py  pyproject.toml  requirements.txt  run_experiments.py  setup_conda.sh  test_integration.py  train_clifford.sh
cnn/: __init__.py  celeba_train.py  cifar10_train.py  cliffordar_model.py  dsprites_train.py  fashion_train.py  fashion_train_timing.json  imagenet_train.py  mnist_cnn_train.py  models.py  spherear_model.py  train_vcae.py
cnn/experimental/: models_learnable_radius.py  train_vcae_learnable_radius.py
dists/: __init__.py  clifford.py
dsprites/: dsprites_train.py  mlp_model.py
mnist/: __init__.py  mlp_vae.py  mnist_clifpws.py  mnist_vae_knn_results.csv  mnist_vmf.py  mnist_vmf_knn_results.csv
scripts/: binding_depth_heatmap.py  bundle_heatmap.py  paper_bind_bundle_figure.py  rolefiller_heatmap.py  sample_viz.py  surface_area_plot.py
src/clifford/: __init__.py  clifford.py  mnist_clifford.py  test_clifford.py
utils/: __init__.py  low_freq_generator.py  plotting.py  vsa.py  wandb_utils.py
vmf/: setup.py
vmf/hyperspherical_vae/: __init__.py
vmf/hyperspherical_vae/distributions/: __init__.py  hyperspherical_uniform.py  von_mises_fisher.py
vmf/hyperspherical_vae/ops/: __init__.py  ive.py
