[project]
name = "clifford-vae"
version = "0.1.0"
description = "experimental/wip sampling from clifford torus defined on the hypersphere during VAE training"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "pandas",
    # "tqdm",      # optional
    # "quadpy",    # optional
]
