[project]
name = "clifford-vae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "torch>=2.1",
    "torchmetrics[image]>=1.0",
    "torchvision>=0.16",
    "wandb>=0.15",
]
